# health-insurance-reserving-handbook

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT-HANDOFF.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  environment.yml  mkdocs.yml  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.streamlit/: config.toml
apps/: chain_ladder_workshop.py  triangle_workshop.py
bibliography/: COL-PROESA-FASECOLDA-PVS-2021.md  README.md  chatgpt-deep-research-report.md  claude-deep-research-report.md  gemini-deep-research-report.md
config/: diccionario_datos_canonico.yml
docs/: ask-the-handbook.md  bibliography.md  glossary.md  index.md  marco-preparacion-datos-metodologias-parte-1.md  marco-preparacion-datos-metodologias-parte-2.md  matriz-preparacion-datos-metodologias.md  methodology-selection-guide.md  roadmap.md
overrides/: main.html
planning/: 06-sprint1-bornhuetter-ferguson.md  06-sprint2-bf-streamlit.md  07-sprint0-ask-handbook-zero-cost.md  08-sprint1-ask-handbook-zero-cost.md  09-sprint2-ask-handbook-contextual.md  10-sprint2-delivery-2-1-context-suggestions.md  11-sprint2-delivery-2-2-global-panel.md  12-sprint2-delivery-2-3-analytics-privacy-feedback.md
scripts/: apply_mkdocs_patch.py  audit_docs.py  convert_igrasans.py  fix_github_math_rendering.py  generate_demo_monthly_triangles.py  generate_demo_paid_incurred.py  generate_demo_triangle_visuals.py  generate_demo_triangles.py  iniciar_asistente_triangulos.py  (+3 more)
(+147 files in other folders)
