[project]
name = "health-insurance-reserving-handbook"
version = "0.1.0"
description = "Manual técnico de IBNR, reserving y modelación actuarial para seguros de salud, con aplicaciones al sistema de salud colombiano."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Health Insurance Reserving Handbook" }
]
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
