[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "health-insurance-reserving-handbook"
version = "0.5.0"
description = "Manual técnico y reproducible sobre IBNR y reservas actuariales en seguros de salud, con aplicaciones al sistema colombiano."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Javier Forero" }
]
license = { text = "MIT" }
keywords = [
  "IBNR",
  "actuarial reserving",
  "health insurance",
  "loss development",
  "Colombia",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
